# ChangeLog for sys-apps/hal
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/ChangeLog,v 1.287 2009/06/01 22:51:46 dang Exp $

*hal-0.5.12_rc1-r6 (01 Jun 2009)

  01 Jun 2009; Daniel Gryniewicz <dang@gentoo.org>
  -hal-0.5.12_rc1-r5.ebuild, +hal-0.5.12_rc1-r6.ebuild:
  Bump to hal-0.5.12_rc1-r6

  - Add root access to org.freedesktop.Hal.(Device Manager) to allow X and
    NM to work. Bug #271837


*hal-0.5.12_rc1-r5 (29 May 2009)

  29 May 2009; Daniel Gryniewicz <dang@gentoo.org>
  -hal-0.5.12_rc1-r2.ebuild, -hal-0.5.12_rc1-r3.ebuild,
  +hal-0.5.12_rc1-r5.ebuild:
  Fix bug #267042 and bug #269897

  16 May 2009; Robin H. Johnson <robbat2@gentoo.org> hal-0.5.9.1-r3.ebuild,
  hal-0.5.11-r4.ebuild, hal-0.5.11-r8.ebuild, hal-0.5.12_rc1-r2.ebuild,
  hal-0.5.12_rc1-r3.ebuild, hal-0.5.12_rc1-r4.ebuild:
  Migration to virtual/libusb. Verified by code inspection.

*hal-0.5.12_rc1-r4 (13 May 2009)

  13 May 2009; Daniel Gryniewicz <dang@gentoo.org>
  +hal-0.5.12_rc1-r4.ebuild:
  Remove duplict file in Makefile.am; bug #267926

*hal-0.5.12_rc1-r3 (09 May 2009)

  09 May 2009; Daniel Gryniewicz <dang@gentoo.org> -hal-0.5.12_rc1.ebuild,
  +hal-0.5.12_rc1-r3.ebuild:
  Bump to hal-0.5.12_rc1-r3
  - Add more missing dbus policy. This is now equivalent to what Fedora ships,
    so it should be fairly complete.
  - Fix bad consolekit enabling; bug #268376

  02 May 2009; Daniel Gryniewicz <dang@gentoo.org> hal-0.5.12_rc1-r2.ebuild:
  Block g-p-m-2.24-4-r1 and less, due to policy file conflict

*hal-0.5.12_rc1-r2 (01 May 2009)

  01 May 2009; Daniel Gryniewicz <dang@gentoo.org> files/0.5.10-hald.rc,
  -hal-0.5.12_rc1-r1.ebuild, +hal-0.5.12_rc1-r2.ebuild:
  - Indicate hal should start after consolekit (bug #267706)
  - Add KillSwitch to the dbus policy (bug #267621)

*hal-0.5.12_rc1-r1 (30 Apr 2009)

  30 Apr 2009; Daniel Gryniewicz <dang@gentoo.org>
  +hal-0.5.12_rc1-r1.ebuild, metadata.xml: