@@ -73,14 +73,14 @@ DIST hal-0.5.9.1.tar.gz 1596347 RMD160 4f1f8b9513d4e168d4d043970c062cc9084f554f 
 EBUILD hal-0.5.11-r4.ebuild 9492 RMD160 054420886767ee8aa38596efb4bfaa9d91ae10a2 SHA1 3812fd6e800b0bc1247204c05caf8e195f0d2a46 SHA256 d610b3a5fa9da6329848c8f63b98d4df8da9c58c35f286b9d013168ac49193b7
 EBUILD hal-0.5.11-r8.ebuild 8898 RMD160 ea2eb3ac5b3fa3cafbd740a420d4b9c334ae2fcd SHA1 7eda0152fd68f157d87c26bd53c59aa0cec73c9d SHA256 2b3d3a29d4f09991ae074033e8cae94e137e53472b82ac6f321221bd14f14a33
 EBUILD hal-0.5.12_rc1-r4.ebuild 9457 RMD160 8c36a4e6afd426a17b68c73fb74e70aba18e2f64 SHA1 6e6c100839df5e85af09314e0ae3a83d6acefb60 SHA256 14046c9f90489f57e96319c645ed89dbdbd2dff7393fb6b41ed37b76443fcbf1
-EBUILD hal-0.5.12_rc1-r6.ebuild 9705 RMD160 609d2136cbaa814773ebc0b1083b5ba5b99a6822 SHA1 69974580978c4ba60b6c5a2641b19a8421391a35 SHA256 33ffb1283569c94e4894d413d15e5e71efcc29a6c821648040415d06a0b057b1
+EBUILD hal-0.5.12_rc1-r6.ebuild 9813 RMD160 35cbb6551ae1dcf39188bf67df447f265c2f4252 SHA1 3f598fa6bc0ac4c89f9449764b5f1bbc456ec9ba SHA256 d6298fc3a7553e92112029cf846395b9f43b6e1e0eed0ee0567a0a1d27f04255
 EBUILD hal-0.5.9.1-r3.ebuild 6696 RMD160 ef27a83167b45d014a5c165f74c6f9c951577edb SHA1 84bd6a256c6ad2eba888aed3c88869b2de2954bb SHA256 aee788e6497051c4c2a89478f31d49cdcb024b2fa216e0d7db9ef2f6a1a1a186
-MISC ChangeLog 48772 RMD160 4c67d86a0a39c60a3494225e381fbe56c474972c SHA1 adef395df462be5071fb61dcb77b5a19c232e74d SHA256 0eb456ba2c2cf3dc4066dceec6ac1f6a3db7b7314c99c947842fce34775ac1f5
+MISC ChangeLog 48895 RMD160 5d2ae6fba3d35c0c110f8ef85ad5b7f8c8d12025 SHA1 b20a8238332be5d4fc74204319b2c5b7c4006430 SHA256 72fb6fa86fcb0e6a4bddd50e448ad16ae8712410bf5e9f21c9be0252be0e49f1
 MISC metadata.xml 2155 RMD160 1fcdfa6184292a67ea656d4f7ccb088fc6bdd1ae SHA1 9f176d6b9b599758551116a9e373f03450d861a6 SHA256 149100f02d310a485d9d543ec0bdf0848fbd079b813a6f8bb7e2f1a53790ebce
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFKJFutomPajV0RnrERAl6eAJ9ZL7SpAU4S7X2go5I07oeF7j+IIwCdETEZ
-oPGPk/BF+80DnoTbY6h5VXU=
-=4F/F
+iD8DBQFKLEaTomPajV0RnrERAtnXAJ9fR4AwKbseq0bDW41dp3CkDN+skACfXkyG
+f0eStV8uKPkO8gR5P5aqVLQ=
+=nxpc
 -----END PGP SIGNATURE-----
